force-app/main/default/objects/Jira_Issue__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <length>150</length>
    <type>Text</type>
</CustomField>