force-app/main/default/objects/Jira_Issue__c/fields/Created_Date_Jira__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Jira__c</fullName>
    <label>Created Date Jira</label>
    <type>DateTime</type>
</CustomField>