force-app/main/default/objects/Jira_Issue__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <externalId>true</externalId>
    <label>Issue Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>