force-app/main/default/objects/Jira_Issue__c/fields/Jira_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_ID__c</fullName>
    <externalId>true</externalId>
    <label>Jira ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>