force-app/main/default/objects/Jira_Issue__c/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <label>Jira Link</label>
    <type>Url</type>
</CustomField>