force-app/main/default/objects/Jira_Issue__c/fields/Status_ID__c.field-meta.xml
<CustomField>
    <fullName>Status_ID__c</fullName>
    <label>Status ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>