force-app/main/default/objects/Jira_Issue__c/fields/Updated_Date_Jira__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date_Jira__c</fullName>
    <label>Updated Date Jira</label>
    <type>DateTime</type>
</CustomField>