force-app/main/default/objects/Jira_Issue__c/listViews/All_Jira_Task.listView-meta.xml
<ListView>
    <fullName>All_Jira_Task</fullName>
    <columns>Summary__c</columns>
    <columns>Issue_Key__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Jira Task</label>
</ListView>